# containerizedAppWithBOM

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_BOM  Dockerfile_BOM_and_user  Dockerfile_BOM_and_user_and_app  LICENSE  README.md
src/: CMakeLists.txt  Msg.proto  main.cpp
